fix(ui): scrollbar disappearing after opening dropdown

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -147,6 +147,7 @@
 	}
 	html {
 		@apply font-sans;
+		scrollbar-gutter: stable;
 	}
 }
 
